# AskAlfred

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/commands/: date_time.py  goodby.py  greeting.py  look_up.py  music.py  self.py
src/handler/: listen.py
src/speech_recognition/: recognizer.py
src/tts/: tts_engine.py
src/types/: commands.py
tests/: conftest.py  test_commands.py  test_listen.py  test_recognizer.py  test_tts_engine.py
