[tool.poetry]
name = "AskAlfred"
version = "0.1.0"
description = "Virtual Assistant"
authors = ["Ian Maze <mazeiandev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.0"
pyttsx3 = "^2.90"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
