[tool.poetry]
name = "AskAlfred"
version = "0.1.0"
description = "Virtual Assistant"
authors = ["Ian Maze <mazeiandev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.14"
piper-tts = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pytest = "^8.3.2"

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
